--- a/Sentiment_Pagolu_Approach.ipynb
+++ b/Sentiment_Pagolu_Approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import re\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -163,25 +164,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5666666666666667\n"
+      "0.6333333333333333\n",
+      "0.6\n",
+      "0.6\n",
+      "0.7\n",
+      "0.5333333333333333\n",
+      "0.7666666666666667\n",
+      "0.7\n",
+      "0.6666666666666666\n",
+      "0.7333333333333333\n",
+      "0.6666666666666666\n"
      ]
     }
    ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(labelled_data, labels, test_size=0.1)\n",
+    "parameters = {'n_estimators':[10,100],'criterion':('gini','entropy'), 'max_depth':[2,20]}\n",
     "\n",
-    "clf = RandomForestClassifier()\n",
+    "rfc = RandomForestClassifier(n_estimators=10)\n",
+    "clf = GridSearchCV(rfc, parameters, cv=5)\n",
     "clf.fit(X_train, y_train)\n",
     "predictions = clf.predict(X_test)\n",
-    "print(accuracy_score(y_test, predictions))"
+    "print(accuracy_score(y_test, predictions))\n",
+    "    \n",
+    "\n",
+    "    #n_estimators=’warn’, criterion=’gini’, max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features=’auto’, max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None\n",
+    "\n",
+    "#{'kernel':('linear', 'rbf'), 'C':[1, 10]}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
