--- a/Sentiment_Pagolu_Approach.ipynb
+++ b/Sentiment_Pagolu_Approach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from nltk.stem import PorterStemmer"
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -114,6 +115,7 @@
     "from nltk.stem.snowball import SnowballStemmer\n",
     "stemmer = SnowballStemmer(\"english\")\n",
     "porter = PorterStemmer()\n",
+    "stop_words = set(stopwords.words('english')) \n",
     "\n",
     "def clean1(message):\n",
     "    message = message.lower()\n",
@@ -132,6 +134,7 @@
     "    message = message.replace('$','')\n",
     "    message = re.sub(r\"[^A-Za-z0-9]\", \" \", message)\n",
     "    message = message.split()\n",
+    "    message = [word for word in message if word not in stop_words]\n",
     "    message = [porter.stem(word) for word in message]"
    ]
   },
